# sliceslice-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: check.yml  publish.yml
bench/: Cargo.toml
bench/benches/: i386.rs  random.rs
bench/sse4-strstr/: Cargo.toml  build.rs
bench/sse4-strstr/src/: lib.rs  wrapper.cpp  wrapper.h
benches/: avx2_anysize.rs  i386.rs  random.rs
data/: needle
examples/: grep.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dynamic_avx2.rs
scripts/: check-version.sh
src/: aarch64.rs  bits.rs  lib.rs  memchr.rs  memcmp.rs  multiversion.rs  stdsimd.rs  wasm32.rs  x86.rs
src/avx2/: mod.rs  original.rs  rust.rs
src/x86/: mod.rs
src/x86/avx2/: mod.rs
src/x86/avx2/deprecated/: mod.rs  original.rs  rust.rs
tests/: i386.rs
