[package]
name = "sliceslice"
version = "0.2.1"
authors = ["marmeladema <xademax@gmail.com>", "Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "A fast implementation of single-pattern substring search using SIMD acceleration"
readme = "README.md"
repository = "https://github.com/cloudflare/sliceslice-rs"
license = "MIT"
keywords = ["search", "text", "string", "single", "simd"]

[dependencies]
memchr = "2.3"

[profile.release]
debug = true
