[package]
name = "sliceslice"
version = "0.4.0"
authors = ["marmeladema <xademax@gmail.com>", "Zak Cutner <me@zakcutner.uk>"]
edition = "2021"
description = "A fast implementation of single-pattern substring search using SIMD acceleration"
readme = "README.md"
repository = "https://github.com/cloudflare/sliceslice-rs"
license = "MIT"
keywords = ["search", "text", "string", "single", "simd"]

[dependencies]
memchr = "2.3"
multiversion = { version = "0.6", default-features = false }
seq-macro = "0.2"

[dev-dependencies]
cfg-if = "1"
memmap2 = "0.5"

[profile.release]
debug = true

[features]
aarch64 = []
stdsimd = []
