[package]
name = "sliceslice"
version = "0.4.2"
authors = ["marmeladema <xademax@gmail.com>", "Zak Cutner <me@zakcutner.uk>"]
edition = "2021"
description = "A fast implementation of single-pattern substring search using SIMD acceleration"
readme = "README.md"
repository = "https://github.com/cloudflare/sliceslice-rs"
license = "MIT"
keywords = ["search", "text", "string", "single", "simd"]

[dependencies]
cfg-if = "1"
paste = "1"
memchr = "2.3"
seq-macro = "0.3"

[dev-dependencies]
memmap2 = "0.5"

[profile.release]
debug = true

[features]
stdsimd = []
