[package]
name = "sliceslice-bench"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
criterion = "0.3"
memmem = "0.1"
sliceslice = { path = ".." }
sse4-strstr = { path = "sse4-strstr" }
twoway = "0.2"

[[bench]]
name = "i386"
harness = false

[[bench]]
name = "random"
harness = false

[profile.release]
debug = true
