[package]
name = "sliceslice-bench"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
criterion = "0.3"
memchr = "2.4"
memmem = "0.1"
sliceslice = { path = ".." }
sse4-strstr = { path = "sse4-strstr", optional = true }
twoway = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
criterion-linux-perf = "0.1"

[[bench]]
name = "i386"
harness = false

[[bench]]
name = "random"
harness = false

[profile.bench]
codegen-units = 1
lto = true
