[package]
name = "sliceslice-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
libfuzzer-sys = "0.4"
sliceslice = { version = "0.4.1", path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "dynamic_avx2"
path = "fuzz_targets/dynamic_avx2.rs"
test = false
doc = false
